@@ -1,6 +1,7 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Allow code ref refs as a means of using callback attributes repeately
 
 1.07      2019-11-06 11:50:09-08:00 America/Los_Angeles
         - Sub attrs in objs lazily-run to set value on first access
